fix: spacing

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,6 @@ body {
   color: var(--color-text);
   max-width: 58em;
   margin: 0 auto;
-  padding-top: 2em;
 }
 
 /* Typography */
